--- a/soap/sites/all/themes/soapomegacom2/css/global.scss
+++ b/soap/sites/all/themes/soapomegacom2/css/global.scss
@@ -1112,8 +1112,8 @@ body.node-type-hats {
 
               &:after {
                 position: absolute;
-                /*content: '__';*/
-                content: '_';
+                content: '__';
+                /*content: '_';*/
                 bottom: 6px;
                 right: -5px;
               }
@@ -1287,8 +1287,8 @@ body.node-type-hats {
 
               &:after {
                 position: absolute;
-                content: '_';
-                /*content: '__';*/
+                content: '__';
+                /*content: '_';*/
                 bottom: 6px;
                 right: -5px;
               }
@@ -1349,7 +1349,7 @@ body.node-type-hats {
     }
     .find-block {
       position: absolute;
-      top: 197px;
+      top: 117px;
       right: 0;
       z-index: 50;
 
@@ -1358,7 +1358,7 @@ body.node-type-hats {
       &:after {
         content: 'Вы искали: ';
         position: absolute;
-        top: 12;
+        top: 12px;
         left: -100px;
       }
     }
@@ -1451,8 +1451,8 @@ body.node-type-hats {
 
               &:after {
                 position: absolute;
-                /*content: '__';*/
-                content: '_';
+                content: '__';
+                /*content: '_';*/
                 bottom: 6px;
                 right: -5px;
               }
