--- a/webprocrm/css/main.css
+++ b/webprocrm/css/main.css
@@ -251,6 +251,50 @@ header.header {
 .title {
   color: white; }
 
+#login {
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(0, 0, 0, 0.2), 0 3px 0 white, 0 4px 0 rgba(0, 0, 0, 0.2), 0 6px 0 white, 0 7px 0 rgba(0, 0, 0, 0.2); }
+
+#login {
+  position: relative;
+  z-index: 0; }
+
+#login:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  border: 1px dashed #ccc;
+  top: 5px;
+  bottom: 5px;
+  left: 5px;
+  right: 5px;
+  box-shadow: 0 0 0 1px #fff; }
+
+h1 {
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7), 0px 2px 0 rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
+  text-align: center;
+  color: #666;
+  margin: 0 0 30px 0;
+  letter-spacing: 4px;
+  font: normal 26px/1 Verdana, Helvetica;
+  position: relative; }
+
+h1:after,
+h1:before {
+  background-color: #777;
+  content: "";
+  height: 1px;
+  position: absolute;
+  top: 15px;
+  width: 120px; }
+
+h1:after {
+  right: 0; }
+
+h1:before {
+  background-image: linear-gradient(right, #777777, white);
+  left: 0; }
+
 /* ===============
     ALL: IE Fixes
     =============== */
