--- a/webprocrm/css/main.css
+++ b/webprocrm/css/main.css
@@ -128,6 +128,33 @@ textarea {
   color: #000;
   padding: 0.2em 0; }
 
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+h1, h2, h3, h4, h5, h6 {
+  text-transform: uppercase;
+  font-family: "Arial Black";
+  line-height: 1; }
+
+a {
+  color: #333333;
+  text-decoration: none; }
+  a:hover {
+    text-decoration: underline; }
+
+ul, ol {
+  text-indent: 0; }
+
+table td {
+  padding: 5px; }
+
+tr + tr {
+  padding-bottom: 5px; }
+
+tr:hover {
+  opacity: 0.8;
+  cursor: pointer; }
+
 /* ===== Initializr Styles ==================================================
    Layout
    ========================================================================== */
@@ -295,28 +322,22 @@ h1:before {
   background-image: linear-gradient(right, #777777, white);
   left: 0; }
 
+/* ============
+   Components
+   ============= */
+.edit-dlg > div {
+  display: inline-block;
+  width: 40%; }
+
+.edit-content > .row {
+  display: inline-block;
+  width: 40%; }
+
 /* ===============
     ALL: IE Fixes
     =============== */
 .ie7 .title {
   padding-top: 20px; }
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-h1, h2, h3, h4, h5, h6 {
-  text-transform: uppercase;
-  font-family: "Arial Black";
-  line-height: 1; }
-
-a {
-  color: #333333;
-  text-decoration: none; }
-  a:hover {
-    text-decoration: underline; }
-
-ul, ol {
-  text-indent: 0; }
 
 /* ==========================================================================
    Media Queries
