--- a/mcraft/sites/all/themes/omega_d1/sass/omega-d1.styles.scss
+++ b/mcraft/sites/all/themes/omega_d1/sass/omega-d1.styles.scss
@@ -1,4 +1,4 @@
-// Import external libraries. Taneda Risa /Takanashi Yasuhibo /FWD weat fade /CrowSclaw /**Arai Akino /Stereo Dive Foundation /Aoba Ringo
+// Import external libraries. Taneda Risa /Takanashi Yasuhibo /FWD weat fade /CrowSclaw /**Arai Akino /Stereo Dive Foundation /Aoba Ringo //Kawako Chieko -- Sakura Kiss ///Foreground Eclipse ////Crow'Sclaw (metal)
 @import "compass";
 @import "breakpoint";
 @import "singularitygs";
@@ -233,6 +233,10 @@ $color_t_link: #444;
 $color_bk_std: transparent;
 $color_sl_back: transparent;
 
+$color_out: #72ac2a;
+$color_bk_block: #e9e9e9;
+$color_br_block: #cfcfcf;
+
 
 /* ==========================================================================
    HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
@@ -341,6 +345,7 @@ a {
 
   &:hover {
     text-decoration: underline;
+    color: black;
   }
 }
 
@@ -360,11 +365,12 @@ table {
   border: none;
 
   tr:hover td {background: transparent;}
+  td, th {padding: 5px;}
   td {
     position: relative;
     vertical-align: top;
-
   }
+  th {text-align: center;}
 }
 
 .star {vertical-align: text-top; text-indent: 1; color: red;}
@@ -461,13 +467,21 @@ body {
   }
 }
 
+//.imgtest {
+//  position: absolute;
+//  top: 0;
+//  left: 0;
+//  width: 900px;
+//  height: 500px;
+//  background: transparent url('#{$img-root}bk_platform.jpg');
+//  z-index: 100;
+//}
 .img-art {
   position: relative;
   top: 0;
   left: 0;
   z-index: -1;
   margin-right: 7%;
-
 
   .platform {
     position: relative;
@@ -557,7 +571,7 @@ body {
 
   .block {
     margin-left: 15px;
-    margin-right: 15px;
+//    margin-right: 15px;
     margin-bottom: 40px;
 
     -webkit-box-shadow: -4px -4px 10px 0px rgba(0, 0, 0, 0.15);
@@ -575,12 +589,17 @@ body {
     .menu {
       background: white;
       padding: 20px;
+      margin-top: 0;
 
       li {
         padding: 5px 0;
         margin-left: 10px;
         //text-decoration: underline;
       }
+    }
+    .block__content {
+      background: white;
+      padding: 20px;
     }
   }
 }
@@ -671,18 +690,13 @@ body {
     Page custom
     ============= */
 
-//.page-fpp {
-  //.node--front-page--full {
-    .main.index {
-    }
-  //}
-//}
-
 .page-forum {
 
   .forum-table-wrap {margin-bottom: 30px;}
 
   .forum-table-superheader {
+    //border-radius: 10px;
+
     @include blockgrad();
 
     a {color: white;}
@@ -690,21 +704,192 @@ body {
   table.forum-table {
     width: 100%;
 
-    tr {border: none;}
-    thead th {background: transparent; }
-    tbody .forum-name {
-      Padding: 1em;
+    td.forum-number-topics {min-width: 112px;}
+    td.forum-last-reply {min-width: 212px;}
+    td.forum-list-icon {
+      vertical-align: top;
+      text-align: center;
+      width: 50px;
+    }
+
+    .forum-name {
 
       a {color: #d72a24; font-size: 1.25em;}
+    }
+    .forum-description {padding-bottom: 1em;}
+    .forum-last-reply > a:first-child {
+      margin: 0;
+      color: #d72a24;
+    }
+  }
+
+  //#forum-statistics {display: none;}
+
+  #block-views-user-block-block-forum {
+    max-width: 500px;
+    display: inline-block;
+    width: 230px;
+    padding: 5px;
+    background: $color_bk_block;
+    border: 1px solid $color_br_block;
+    border-radius: 10px;
+    margin-bottom: 20px;
+
+    .views-field-picture {
+
+      //img {max-height: 70px;}
+    }
+    .views-field-name {}
+    .views-field-mail {
+      display: inline-block;
+      color: transparent;
+      background: url('#{$img-root}ico_mail.png') no-repeat 0 0;
+      width: 30px;
+      height: 30px;
+
+      @include bk-scale('ico_mail.png');
+
+      * {color: transparent;}
+    }
+    .views-field-nothing-1 {
+      display: inline-block;
+      color: transparent;
+      background: url('#{$img-root}ico_commerce.png') no-repeat 0 0;
+      width: 30px;
+      height: 30px;
+
+      @include bk-scale('ico_mail.png');
+
+      * {color: transparent;}
+    }
+    .views-field-nothing {
+      display: inline-block;
+      color: transparent;
+      background: url('#{$img-root}ico_out.png') no-repeat 0 0;
+      width: 24px;
+      height: 30px;
+
+      @include bk-scale('ico_out.png');
+
+      &:hover {
+        background: url('#{$img-root}ico_out_hover.png') no-repeat 0 0;
+        @include bk-scale('ico_out.png');
+      }
+
+      * {display: inline;color: transparent;}
+    }
+
+    .left, .right {display: inline-block;}
+    .left {width: 70px; margin-left: 5px; vertical-align: top;}
+    .right {width: 100px;}
+
+    .icons {
+      margin-top: 20px;
+    }
+  }
+  #block-search-form {
+    display: inline-block;
+
+    #edit-submit {display: none;}
+    #edit-search-block-form--2 {
+      background: $color_bk_block url('#{$img-root}bk_find.png') no-repeat 100% 0;
+      border: 1px solid $color_br_block;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      padding: 5px 40px 5px 5px;
+      width: 250px;
     }
   }
 }
 
 .page-profile-main {
-  .field-label {display: inline-block; width: 40%;}
-  .field-label + .field {display: inline-block; width: 50%; margin-bottom: 30px;}
 
-  .field--name-field-skin {display: block !important;}
+  h1 {display: none;}
+  h2 {text-transform: none;}
+
+  .left {
+    display: inline-block;
+    max-width: 180px;
+    width: 26%;
+    margin-right: 2%;
+
+    img {max-width: 180px; width: 100%;}
+
+    .user-img-edit {
+      text-align: center;
+      padding: 5px;
+      background: #cccccc;
+      border: 1px solid #adadad;
+      border-radius: 10px;
+      margin-top: 5px;
+
+      &:hover {border-style: outset;}
+    }
+  }
+  .right {
+    display: inline-block;
+    width: 70%;
+    vertical-align: top;
+
+
+    .field-label {
+      display: inline-block;
+      width: 43%;
+      margin: 0;
+      margin-bottom: 5px;
+      font-size: 1em;
+      text-transform: none;
+    }
+    .field-label + .field {
+      display: inline-block;
+      width: 55%;
+      margin-bottom: 5px;
+    }
+  }
+
+  .field--name-field-skin {
+    margin-bottom: 1.5em;
+    display: inline-block;
+    width: 40%;
+    margin-right: 4%;
+    max-width: 300px;
+    vertical-align: top;
+
+    img {width: 100%; max-width: 300px;}
+  }
+  .description {
+    display: inline-block;
+    width: 50%;
+    vertical-align: top;
+
+    p {margin:0;}
+    p+p {margin-top: 10px;}
+
+    .profile-img-edit {
+      margin-top: 20px;
+      text-align: center;
+      padding: 5px;
+      border-radius: 10px;
+      width: 150px;
+      vertical-align: middle;
+
+      a {color: white;}
+
+      // needs latest Compass, add '@import "compass"' to your scss
+      background-color: #00d400; // Old browsers
+      @include filter-gradient(#00d400, #009100, vertical); // IE6-9
+      @include background-image(linear-gradient(top,  #00d400 0%,#009100 100%));
+    }
+  }
+  //.field--name-field-about-self {display: block !important; width: 100% !important;}
+}
+
+.page-node-7 { //Personal Access Check
+  .node__content a {
+    color: #00007f;
+    font-size: 1em;
+    margin: 10px;
+  }
 }
 
 /* ===============
@@ -718,6 +903,119 @@ body {
 //  .jcrop-preview-wrapper { width: auto !important; height: auto !important;}
 //  .jcrop-preview {max-width: 500px !important; height: auto !important;}
 //}
+
+.node-teaser {
+
+  img {padding: 5px;}
+
+  & > header {
+    @include pie-clearfix;
+
+    .node__title {
+      display: inline-block;
+      float: left;
+    }
+    .submitted {
+      display: inline-block;
+      text-align: right;
+      margin: 0;
+      float: right;
+      color: #999999;
+      padding-left: 10px;
+      background: url('#{$img-root}ico_submitted.png') no-repeat 0 3px;
+    }
+  }
+}
+.node--full img {padding: 10px;}
+
+#block-views-user-block-block {
+  .views-field-nothing {
+    border-radius: 5px;
+    margin-left: 10px;
+
+    // needs latest Compass, add '@import "compass"' to your scss
+    background-color: #ca1c1c; // Old browsers
+    @include filter-gradient(#ca1c1c, #880303, vertical); // IE6-9
+    @include background-image(linear-gradient(top,  #ca1c1c 0%,#880303 100%));
+
+    a {color: white;}
+  }
+}
+#block-block-1 {
+  .section {
+    margin-top: 15px;
+
+    h3 {
+      font-weight: 500;
+      color: #414141;
+      margin: 0;
+      margin-bottom: 5px;
+      font-family: $font_text;
+      text-transform: capitalize;
+    }
+
+    p {margin: 0; color: #1c1c1c; position: relative; z-index: 5;}
+    &>div {position: relative; height: 20px; width: 100%; border: 1px solid #578413}
+    .progress {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: url('#{$img-root}bk_server.jpg') repeat-x 0 0;
+      z-index: 1;
+      height: 20px;
+      width: 75%;
+    }
+  }
+}
+#block-views-user-block-block-user {
+  .view-content {text-align: left;}
+  .left {
+    width: 35%;
+    display: inline-block;
+    vertical-align: top;
+
+    img {width: 90%;}
+  }
+  .right {
+    width: 60%;
+    display: inline-block;
+  }
+  .other {text-align: center;}
+
+  .views-field-name {
+    font-weight: bold;
+    word-wrap: break-word;
+    word-break: break-all;
+    margin-bottom: 7px;
+  }
+  .views-field-nothing-3 {
+    color: #38d21e;
+
+    .views-label, .field-content {display: inline-block;}
+    .field-content {height: 22px;}
+    a{
+      padding-right: 28px;
+      height: 22px;
+      display: block;
+      background: url('#{$img-root}bk_balance.png') no-repeat 100% 0;
+    }
+  }
+  .views-field-nothing-2 {
+    border-top: 4px solid #bebebe;
+    margin-top: 10px;
+  }
+  .views-field-nothing {
+    border-radius: 5px;
+    margin-left: 10px;
+
+    // needs latest Compass, add '@import "compass"' to your scss
+    background-color: #ca1c1c; // Old browsers
+    @include filter-gradient(#ca1c1c, #880303, vertical); // IE6-9
+    @include background-image(linear-gradient(top,  #ca1c1c 0%,#880303 100%));
+
+    a {color: white;}
+  }
+}
 
 #userinfo {
   width: 500px;
@@ -806,12 +1104,41 @@ div.slider {
 /* ===============
     Querys
     ============= */
+@media only screen and (max-width: 480px) {
+  #block-system-main-menu li {display: inline-block; vertical-align: top; padding-left: 5px; }
+  #block-system-main-menu li a:hover {background: none;}
+  table.forum-table {max-width: 100% !important; min-width: auto !important; background: transparent !important;}
+  table.forum-table tr{width: 100% !important;  min-width: auto !important; display: block !important;}
+  table.forum-table td {width: 30% !important;  min-width: auto !important;}
+  td.forum-last-reply {display: none !important;}
+  .submitted {display: none !important;}
 
-//@media only screen and (min-width: 768px) {
-//  .l-page {
-//    padding-top: 270px;
-//  }
-//}
+  .forum-post-panel-sub {width: 50px;}
+  .forum-post-panel-main { margin-left: 50px;}
+  .forum-node-create-links {width: 100%;}
+}
+@media only screen and (max-width: 768px) {
+
+  .tabs--primary.links--inline {display: none;}
+  .forum-tools {display: none;}
+
+  .left, .right,
+  .field--name-field-skin, .description {width: 90% !important;}
+
+  #block-views-user-block-block-forum {display: none !important;}
+  .forum-post-panel-sub {width: 70px;}
+  .forum-post-panel-main { margin-left: 70px;}
+}
+@media only screen and (max-width: 960px) {
+  .img-art {
+    //    overflow: visible;
+    //    height: 375px;
+    display: none;
+  }
+  .h-container {
+    margin-top: 0;
+  }
+}
 //@media only screen and (min-width: 850px) {
 //  .l-page {
 //    padding-top: 295px;
